horizontal scroll and add-training button fixes

--- a/src/scss/components/banner-block.scss
+++ b/src/scss/components/banner-block.scss
@@ -2,17 +2,18 @@
   position: relative;
   background: $te-white;
   padding: 30px;
-  margin-right: -50px;
+  margin-right: 0;
 
   &:after {
     position: absolute;
     z-index: -1;
     top: 40px;
-    left: -50vw;
-    width: 150vw;
-    height: calc(100% + 110px); //added offset needs to be equal to top prop value
+    left: 50%;
+    width: 100vw;
+    height: calc(100% + 110px);
     content: ' ';
     background-color: $te-homepage-background;
+    transform: translateX(-50%);
   }
 
 
