--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,5 +1,6 @@
 .footer {
   background-color: $te-lightblue;
+  position: relative;
   z-index: 1;
 
   p {
